// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchRenderer snapshot (T-0006-095) — productive×focus matches snapshot at productive×focus 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "minHeight": 56,
      "paddingHorizontal": 12,
    }
  }
>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#14171A",
        "flex": 1,
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginRight": 12,
      }
    }
  >
    Enable notifications
  </Text>
  <RCTSwitch
    accessibilityLabel="Enable notifications"
    accessibilityRole="switch"
    accessibilityState={
      {
        "checked": false,
      }
    }
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#4F46E5"
    style={
      {
        "height": 31,
        "width": 51,
      }
    }
    thumbTintColor="#FFFFFF"
    tintColor="#ECEEF1"
    value={false}
  />
</View>
`;

exports[`SwitchRenderer snapshot (T-0006-096) — expressive×health matches snapshot at expressive×health 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "minHeight": 56,
      "paddingHorizontal": 12,
    }
  }
>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#1A1715",
        "flex": 1,
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 26,
        "marginRight": 12,
      }
    }
  >
    Enable notifications
  </Text>
  <RCTSwitch
    accessibilityLabel="Enable notifications"
    accessibilityRole="switch"
    accessibilityState={
      {
        "checked": false,
      }
    }
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#4A7438"
    style={
      {
        "height": 31,
        "width": 51,
      }
    }
    thumbTintColor="#FFFFFF"
    tintColor="#EFE9DF"
    value={false}
  />
</View>
`;
